Fixed swager file
